# Media-86

./: ADVANCED_UI_UX_IMPLEMENTATION.md  LICENSE  PHASE_3_PERFORMANCE_SUMMARY.md  PHASE_4_IMPLEMENTATION_SUMMARY.md  PHASE_5_PLAN.md  README.md  Series-86-CSS-Guide.md  Series-86-CSS-Template.css  Series-86-Design-Guide.md  future_features.md  index.html  optimization_guide.md  package-lock.json  package.json  settings_cog_plan.md  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.js  workflow.md
release-assets/: RELEASE_NOTES_v1.0.0.md
src/: App.css  App.jsx  App_original.jsx  App_refactored.jsx
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: LoadingSpinner.jsx
src/components/ImageViewer/: ImageComparison.jsx  ImageViewer.jsx  OptimizedImageViewer.jsx
src/components/Modals/: RenameModal.jsx  SettingsModal.jsx
src/components/Navigation/: NavigationBar.jsx  NavigationFooter.jsx
src/components/Sidebar/: DirectoryInfo.jsx  EnhancedFileList.jsx  EnhancedSidebar.jsx  FileList.jsx  FileOperations.jsx  Sidebar.jsx  VirtualFileList.jsx
src/components/UI/: AdvancedToolbar.jsx  ThemeToggle.jsx
src/context/: AppContext.jsx
src/hooks/: useAdvancedImageCache.js  useAdvancedZoom.js  useCustomKeyboardShortcuts.js  useDragDrop.js  useFileSelection.js  useImageCache.js  useImageNavigation.js  useImageNavigation.ts  useKeyboardShortcuts.js  useLoadingStates.js  useSlideshow.js  useTheme.js
src/types/: index.ts
