[package]
name = "media-86"
version = "1.1.0"
description = "Media-86 - A modern image viewer and batch processor built with Tauri"
authors = ["Media-86 Contributors"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "media_86_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.6.0", features = ["protocol-asset"] }
tauri-plugin-fs = "2.4.0"
tauri-plugin-shell = "2.2.0"
tauri-plugin-dialog = "2.3.0"
tauri-plugin-opener = "2.4.0"
tauri-plugin-cli = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.25.1"
tauri-plugin-process = "2"
rayon = "1.8"
base64 = "0.22"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }

